Modification de fichier

--- a/examen/Partials/header.html
+++ b/examen/Partials/header.html
@@ -1,6 +1,6 @@
 <head>
 <meta charset="utf-8">
-<title>Examen reseau 2016</title>
+<title>Examen reseau 2016 Benoit Duvivier</title>
 <link rel="stylesheet" href="Assets/css/main.css">
 <script src="script.js"></script>
 </head>
